[build-system]

requires = ["setuptools", "wheel"]

build-backend = "setuptools.build_meta"



[project]

name = "reflex-giscus"

version = "0.1.0"

description = "Reflex custom component giscus"

readme = "README.md"

license = { text = "Apache-2.0" }

requires-python = ">=3.8"

authors = [{ name = "Adarsh Gourab Mahalik", email = "adarshgourabmahalik@outlook.com" }]

keywords = ["reflex","reflex-custom-components"]



dependencies = ["reflex>=0.4.2"]



classifiers = ["Development Status :: 4 - Beta"]



[project.urls]

homepage = "https://github.com/itsmeadarsh2008/reflex-giscus"
source = "https://github.com/itsmeadarsh2008/reflex-giscus"

[project.optional-dependencies]

dev = ["build", "twine"]




[tool.setuptools.packages.find]

where = ["custom_components"]